; ModuleID = '/home/carl/AnghaBench/ccv/lib/extr_ccv_io.c_ccv_read_impl.c'
source_filename = "/home/carl/AnghaBench/ccv/lib/extr_ccv_io.c_ccv_read_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CCV_IO_ANY_FILE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@CCV_IO_ERROR = common dso_local global i32 0, align 4
@CCV_IO_ANY_STREAM = common dso_local global i32 0, align 4
@CCV_IO_DEFLATE_STREAM = common dso_local global i32 0, align 4
@CCV_IO_ANY_RAW = common dso_local global i32 0, align 4
@CCV_IO_UNKNOWN = common dso_local global i32 0, align 4
@readfn = common dso_local global i32 0, align 4
@seekfn = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ccv_read_impl(i8* %0, i32** %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32**, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  store i8* %0, i8** %8, align 8
  store i32** %1, i32*** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32* null, i32** %14, align 8
  %15 = load i32, i32* %10, align 4
  %16 = load i32, i32* @CCV_IO_ANY_FILE, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %43

19:                                               ; preds = %6
  %20 = load i32, i32* %11, align 4
  %21 = icmp eq i32 %20, 0
  br i1 %21, label %22, label %28

22:                                               ; preds = %19
  %23 = load i32, i32* %12, align 4
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %22
  %26 = load i32, i32* %13, align 4
  %27 = icmp eq i32 %26, 0
  br label %28

28:                                               ; preds = %25, %22, %19
  %29 = phi i1 [ false, %22 ], [ false, %19 ], [ %27, %25 ]
  %30 = zext i1 %29 to i32
  %31 = call i32 @assert(i32 %30)
  %32 = load i8*, i8** %8, align 8
  %33 = call i32* @fopen(i8* %32, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %33, i32** %14, align 8
  %34 = load i32*, i32** %14, align 8
  %35 = icmp ne i32* %34, null
  br i1 %35, label %38, label %36

36:                                               ; preds = %28
  %37 = load i32, i32* @CCV_IO_ERROR, align 4
  store i32 %37, i32* %7, align 4
  br label %84

38:                                               ; preds = %28
  %39 = load i32*, i32** %14, align 8
  %40 = load i32**, i32*** %9, align 8
  %41 = load i32, i32* %10, align 4
  %42 = call i32 @_ccv_read_and_close_fd(i32* %39, i32** %40, i32 %41)
  store i32 %42, i32* %7, align 4
  br label %84

43:                                               ; preds = %6
  %44 = load i32, i32* %10, align 4
  %45 = load i32, i32* @CCV_IO_ANY_STREAM, align 4
  %46 = and i32 %44, %45
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %67

48:                                               ; preds = %43
  %49 = load i32, i32* %11, align 4
  %50 = icmp sgt i32 %49, 8
  br i1 %50, label %51, label %57

51:                                               ; preds = %48
  %52 = load i32, i32* %12, align 4
  %53 = icmp eq i32 %52, 0
  br i1 %53, label %54, label %57

54:                                               ; preds = %51
  %55 = load i32, i32* %13, align 4
  %56 = icmp eq i32 %55, 0
  br label %57

57:                                               ; preds = %54, %51, %48
  %58 = phi i1 [ false, %51 ], [ false, %48 ], [ %56, %54 ]
  %59 = zext i1 %58 to i32
  %60 = call i32 @assert(i32 %59)
  %61 = load i32, i32* %10, align 4
  %62 = and i32 %61, 255
  %63 = load i32, i32* @CCV_IO_DEFLATE_STREAM, align 4
  %64 = icmp ne i32 %62, %63
  %65 = zext i1 %64 to i32
  %66 = call i32 @assert(i32 %65)
  br label %81

67:                                               ; preds = %43
  %68 = load i32, i32* %10, align 4
  %69 = load i32, i32* @CCV_IO_ANY_RAW, align 4
  %70 = and i32 %68, %69
  %71 = icmp ne i32 %70, 0
  br i1 %71, label %72, label %80

72:                                               ; preds = %67
  %73 = load i32**, i32*** %9, align 8
  %74 = load i8*, i8** %8, align 8
  %75 = load i32, i32* %10, align 4
  %76 = load i32, i32* %11, align 4
  %77 = load i32, i32* %12, align 4
  %78 = load i32, i32* %13, align 4
  %79 = call i32 @_ccv_read_raw(i32** %73, i8* %74, i32 %75, i32 %76, i32 %77, i32 %78)
  store i32 %79, i32* %7, align 4
  br label %84

80:                                               ; preds = %67
  br label %81

81:                                               ; preds = %80, %57
  br label %82

82:                                               ; preds = %81
  %83 = load i32, i32* @CCV_IO_UNKNOWN, align 4
  store i32 %83, i32* %7, align 4
  br label %84

84:                                               ; preds = %82, %72, %38, %36
  %85 = load i32, i32* %7, align 4
  ret i32 %85
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @_ccv_read_and_close_fd(i32*, i32**, i32) #1

declare dso_local i32 @_ccv_read_raw(i32**, i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
